# ydc_ai_dev

./: .env.example  LICENSE  README.md  README_ZH.md  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: CLAUDE.md
example/: .gitignore  README.md  chat_models.py  pyproject.toml
example/AgentLoop/compact/: .dependency-cruiser.cjs  .gitignore  README.md  eslint.config.js  (+3 more)
example/AgentTools/: json_shema_fc.py  langchain_fc.py  mcp_client_langchain.py  mcp_server.py  xml_fc.py
example/PlanAndExecute/: classics_plan_execute.py  langchain_plan_execute.py
example/ReAct/: README.md  agentscope_react.py  autogen_react.py  classics_react.py  demo.py  improved_react.py  langchain_react.py  langgraph_react.py  simple_react.py  theory.py  theory_react.py  改进总结.md
knowledge/: Agent核心要素-工具.md  Base-Agent.md
knowledge/Agent-memory(Context engineering)/: Chroma：上下文腐烂(Context Rot)：长输入对大型语言模型性能的影响.md  🌟🌟指南-Prompt Cache(KV-Cache).md  🌟🌟🌟Manus - AI代理的上下文工程：构建Manus的经验教训.md  🌟🌟🌟Manus&LangChain - 视频会议交流.md  🌟🌟🌟PostHog AI 的经验与教训.md  🌟🌟🌟从Claude两篇文章分析高级工具的使用.md
knowledge/AgentPlanning/: Agent核心要素-规划(Planning).md
knowledge/AgentTools/: Agent核心要素-工具.md
knowledge/PlanAndExecute/: Plan-and-Execute.md
knowledge/ReAct/: AgentScope.md  ReAct.md  源码分析-langchain.md
knowledge/langchain01/: Agent-核心组件.md  高级使用.md
knowledge/other/: 🌟Langchain- 智能体工程.md
knowledge/projectExperience/: Claude-长期运行的智能体（Long-running Agents) .md
project/: Project.md  STORM Engine - 架构剖析.md  open_deep_research-架构剖析.md  架构剖析.md
project/claude_replica/: README.md
(+219 files in other folders)
