[project]
name = "ydc-ai-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentscope>=1.0.5",
    "autogen-ext>=0.7.5",
    "langchain>=1.0.1",
    "langchain-classic>=1.0.0",
    "langchain-experimental>=0.0.42",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "pyautogen>=0.10.0",
]
